--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -19,8 +19,8 @@ layout: master.html
       <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8">Contact</h1>
       <p class="tagline  thin scrollnimate" data-magic-number="-8" >
         Give me a buzz via email at JOEY.L@W3BY.COM.
-        <br><small><br>- or -<br></small><br>
-        See førm below.
+        <!-- <br><small><br>- or -<br></small><br>
+        See førm below. -->
        </p>
     </div>
    </div>
