--- a/src/portfolio/anne-marie-bowen/index.html
+++ b/src/portfolio/anne-marie-bowen/index.html
@@ -15,13 +15,27 @@ layout: master.html
 <div class="section-group juiced">
   <div class="content">
     <div class="content_text">
-      <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8">Anne-Marie Bowen</h1>
-      <p class="tagline scrollnimate" data-magic-number="100" >
+      <h1 class="headline portfolio-headline" data-magic-number="-8">Anne-Marie Bowen</h1>
+      <p class="tagline " data-magic-number="100" >
 Orlando Bankruptcy Attorney Anne-Marie L. Bowen contacted me looking for an update to her website. Her old website had great content but failed to capture her warmth and friendliness.
 I designed and launched a new website using HTML5, Sass and some JavaScript that was SEO friendly and visually appealing.
         <br><br><br>
         <a href="http://bowenbankruptcylaw.com/" class="btn btn-border" target="_blank">Visit Website</a>
       </p>
+      <div class="project-screenshots">
+        <div class="thumb">
+          <img src="/img/bowen_sss_1.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="Anne-Marie Bowen Home">
+        </div>
+        <div class="thumb">
+          <img src="/img/bowen_sss_2.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="Anne-Marie Bowen About">
+        </div>
+        <div class="thumb">
+          <img src="/img/bowen_sss_3.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="Anne-Marie Bowen Bankrtupcy Law">
+        </div>
+        <div class="reset-thumbs">
+          <a id="reset-thumbs" class="btn" onclick="JL.dragDrop.reset()">reset thumbnails</a>
+        </div>
+      </div>
    </div>
  </div>
 </div>
