--- a/src/portfolio/index.html
+++ b/src/portfolio/index.html
@@ -16,8 +16,8 @@ layout: master.html
 <div class="section-group portfolio">
   <div class="content">
     <div class="content_text">
-      <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8">PORTFOLIO</h1>
-      <ul class="portfolio-list" class="headline scrollnimate" data-magic-number="-9">
+      <h1 class="headline  portfolio-headline" >PORTFOLIO</h1>
+      <ul class="portfolio-list" class="headline " data-magic-number="-9">
         <a href="/portfolio/jl-v2/">
           <li>JL v2</li>
         </a>
