--- a/src/portfolio/juiced/index.html
+++ b/src/portfolio/juiced/index.html
@@ -16,8 +16,8 @@ body: juiced
 <div class="section-group juiced">
   <div class="content">
     <div class="content_text">
-      <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8">Juiced</h1>
-      <p class="tagline scrollnimate" data-magic-number="100" >
+      <h1 class="headline  portfolio-headline" data-magic-number="-8">Juiced</h1>
+      <p class="tagline " data-magic-number="100" >
         Juiced is a Flexbox based CSS framework with added improvements over existing grid frameworks.
         It was built with Sass and Gulp. It uses the Flexible Boxes spec and has some neat features built in.
         <br><br><br>
@@ -26,6 +26,20 @@ body: juiced
         <a href="https://github.com/ovdojoey/Juiced" class="btn btn-border" target="_blank">Github</a>
 
       </p>
+      <div class="project-screenshots">
+        <div class="thumb">
+          <img src="/img/juiced_sss_1.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="Why Juiced?">
+        </div>
+        <div class="thumb">
+          <img src="/img/juiced_sss_2.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="Juiced Docs">
+        </div>
+        <div class="thumb">
+          <img src="/img/juiced_sss_3.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="Juiced Components">
+        </div>
+        <div class="reset-thumbs">
+          <a id="reset-thumbs" class="btn" onclick="JL.dragDrop.reset()">reset thumbnails</a>
+        </div>
+      </div>
    </div>
  </div>
 </div>
@@ -35,8 +49,8 @@ body: juiced
   <p class="scrollnimate brief" data-magic-number="-10">
     Juiced is 100% Sass. It was built with Gulp using Sublime Text and Terminal on a Macbook Pro.
   </p>
-  <img src="/img/juiced2.png" class="max-100">
-  <img src="/img/juiced_ss_1.png" class="max-100">
+  <!-- <img src="/img/juiced2.png" class="max-100"> -->
+  <!-- <img src="/img/.png" class="max-100"> -->
   <div class="project-footer-links">
     <a href="http://juicedcss.com" class="btn btn-border btn-block btn-block-half" target="_blank">Visit Website</a>
 
