--- a/src/portfolio/jl-v1/index.html
+++ b/src/portfolio/jl-v1/index.html
@@ -15,12 +15,26 @@ layout: master.html
 <div class="section-group juiced">
   <div class="content">
     <div class="content_text">
-      <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8">JL V1</h1>
-      <p class="tagline scrollnimate" data-magic-number="100" >
+      <h1 class="headline portfolio-headline" data-magic-number="-8">JL V1</h1>
+      <p class="tagline " data-magic-number="100" >
 This was my website from early 2014 to late 2015.
         <br><br><br>
         <a href="http://old.joeylea.com/" class="btn btn-border" target="_blank">Visit Website</a>
       </p>
+      <div class="project-screenshots">
+        <div class="thumb">
+          <img src="/img/jlv1_sss_1.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="JL Homepage Screenshot">
+        </div>
+        <div class="thumb">
+          <img src="/img/jlv1_sss_2.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="JL Contact Page Screenshot">
+        </div>
+        <div class="thumb">
+          <img src="/img/jlv1_sss_3.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="JL  Page Screenshot">
+        </div>
+        <div class="reset-thumbs">
+          <a id="reset-thumbs" class="btn" onclick="JL.dragDrop.reset()">reset thumbnails</a>
+        </div>
+      </div>
    </div>
  </div>
 </div>
