--- a/src/portfolio/pates-law/index.html
+++ b/src/portfolio/pates-law/index.html
@@ -15,14 +15,26 @@ layout: master.html
 <div class="section-group juiced">
   <div class="content">
     <div class="content_text">
-      <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8">Pates Law</h1>
+      <h1 class="headline portfolio-headline" data-magic-number="-8">Pates Law</h1>
       <h3 class="headline portfolio-headline">2015 Edition</h3>
-      <p class="tagline scrollnimate" data-magic-number="100" >
+      <p class="tagline " data-magic-number="100" >
         I built Pates Law Group a website back in 2012 and it was time for some updates.
          This new site was built on Laravel, is optimized for SEO and is much friendlier on the eyes.
         <br><br><br>
         <a href="http://pateslaw.com" class="btn btn-border" target="_blank">Visit Website</a>
       </p>
+      <div class="project-screenshots">
+        <div class="thumb">
+
+          <img src="/img/pates_law_ss.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="Pates Law Homepage">
+        </div>
+        <div class="thumb">
+          <img src="/img/pates_law_ss2.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="Pates Law">
+        </div>
+        <div class="reset-thumbs">
+          <a id="reset-thumbs" class="btn" onclick="JL.dragDrop.reset()">reset thumbnails</a>
+        </div>
+      </div>
    </div>
  </div>
 </div>
@@ -32,9 +44,8 @@ layout: master.html
   <p class="scrollnimate brief" data-magic-number="-10">
     PatesLaw.com was built with Laravel, HTML5, Sass, and some light JS.  It runs on a Digital Ocean droplet and features server-side compression and cacheing for maximum speed.
   </p>
-  <img src="/img/pates_law_ss.png" class="max-100">
-  <img src="/img/pates_law_ss2.png" class="max-100">
-  
+
+
   <img src="/img/Attorneys_BW.jpg" class="stagger-left big border-big ">
   <div class="project-footer-links">
     <a href="http://pateslaw.com" class="btn btn-border btn-block" target="_blank">Visit Website</a>
