--- a/src/portfolio/welli/index.html
+++ b/src/portfolio/welli/index.html
@@ -15,14 +15,28 @@ layout: master.html
 <div class="section-group juiced">
   <div class="content">
     <div class="content_text">
-      <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8">Welli</h1>
-      <p class="tagline scrollnimate" data-magic-number="100" >
+      <h1 class="headline portfolio-headline" data-magic-number="-8">Welli</h1>
+      <p class="tagline" data-magic-number="100" >
         Welli is a health tracking website that allows for a simple way to track your life over time.
         It works by letting you rate things on a scale of 0 to 10. After you set a rating, you can add tags which are stored along with the rating.
         I built the project using PHP and jQuery.
         <br><br><br>
         <a href="http://gowelli.com/" class="btn btn-border" target="_blank">Visit Website</a>
       </p>
+      <div class="project-screenshots">
+        <div class="thumb">
+          <img src="/img/welli_sss_1.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="Welli Panel Screenshot">
+        </div>
+        <div class="thumb">
+          <img src="/img/welli_sss_2.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="Welli Screenshot">
+        </div>
+        <div class="thumb">
+          <img src="/img/welli_sss_3.png" onclick="this.classList.toggle('expanded')" draggable="true" ondragstart="JL.dragDrop.drag(event)" title="Welli Panel">
+        </div>
+        <div class="reset-thumbs">
+          <a id="reset-thumbs" class="btn" onclick="JL.dragDrop.reset()">reset thumbnails</a>
+        </div>
+      </div>
    </div>
  </div>
 </div>
