updates to links

--- a/src/portfolio/index.html
+++ b/src/portfolio/index.html
@@ -4,8 +4,8 @@ layout: master.html
 ---
 <nav class="header-nav">
   <a href="/">HOME</a>
-  <a href="/portfolio" class="active">PORTFOLIO</a>
-  <a href="/contact">CONTACT</a>
+  <a href="/portfolio/" class="active">PORTFOLIO</a>
+  <a href="/contact/">CONTACT</a>
 </nav>
 <div class="heading-links scroll" id="heading-links-fixed">
   <nav>
