--- a/src/portfolio/the-brick-story/index.html
+++ b/src/portfolio/the-brick-story/index.html
@@ -6,7 +6,7 @@ layout: master.html
 <div class="heading-links" id="heading-links-fixed">
   <nav>
     <a href="/">JL</a>
-    <a href="/portfolio">Portfolio</a>
+    <a href="/portfolio/">Portfolio</a>
     <a href="#" class="active">The Brick Story</a>
   </nav>
   <a href="#/all" onclick="window.JL.achievements.activateAchievement('HUNTRESS')" class="quick-link"><span>⚡</span></a>
