--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -4,8 +4,8 @@ layout: master.html
 ---
 <nav class="header-nav">
   <a href="/">HOME</a>
-  <a href="/portfolio">PORTFOLIO</a>
-  <a href="/contact" class="active">CONTACT</a>
+  <a href="/portfolio/">PORTFOLIO</a>
+  <a href="/contact/" class="active">CONTACT</a>
 </nav>
 <div class="heading-links scroll" id="heading-links-fixed">
   <nav>
