--- a/src/portfolio/juiced/index.html
+++ b/src/portfolio/juiced/index.html
@@ -7,7 +7,7 @@ body: juiced
 <div class="heading-links" id="heading-links-fixed">
   <nav>
     <a href="/">JL</a>
-    <a href="/portfolio">Portfolio</a>
+    <a href="/portfolio/">Portfolio</a>
     <a href="#" class="active">Juiced</a>
   </nav>
   <a href="#/all" onclick="window.JL.achievements.activateAchievement('HUNTRESS')" class="quick-link"><span>⚡</span></a>
